<resources>
    <string name="app_name">Calculator</string>
    <string name="button_number7">7</string>
    <string name="button_number8">8</string>
    <string name="button_number9">9</string>
    <string name="button_number4">4</string>
    <string name="button_number5">5</string>
    <string name="button_number6">6</string>
    <string name="button_number1">1</string>
    <string name="button_number2">2</string>
    <string name="button_number3">3</string>
    <string name="button_dot">.</string>
    <string name="button_number0">0</string>
    <string name="button_equal">=</string>
    <string name="button_clear">Clear</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiple">*</string>
    <string name="button_devide">/</string>
    <string name="textView2">Created By Khalil</string>
</resources>
